--- a/oef 3.1 3.2 3.5/MainWindow.xaml
+++ b/oef 3.1 3.2 3.5/MainWindow.xaml
@@ -6,7 +6,21 @@
         xmlns:local="clr-namespace:oef_3._1_3._2_3._5"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+    <Grid x:Name="MijnGrid">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black" Offset="0"/>
+                <GradientStop Color="Red" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Button x:Name="MijnKnop" Content="Button" HorizontalAlignment="Left" Height="72" Margin="182,125,0,0" VerticalAlignment="Top" Width="145" Click="Button_Click" Foreground="White">
+
+            <Button.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="Red" Offset="1"/>
+                </LinearGradientBrush>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
